fixed overflow triple scroll

--- a/src/App.css
+++ b/src/App.css
@@ -33,5 +33,4 @@ p {
 
 div {
     height: 100vh;
-    overflow: scroll;
 }
